@@ -1,7 +1,7 @@
 2001-05-12  Alan Modra  <amodra@one.net.au>
 
 	* gas/i386/sse2.s: Correct cvtps2dq, movdq2q, and movq2dq
-	* gas/i386/sse2.d: Likewise.  Fix pmuludq too.
+	* gas/i386/sse2.d: Likewise.  Fix pmuludq and punpckhqdq too.
 
 	* gas/i386/ssemmx2.d: Correct movq.
 
